@@ -1,6 +1,7 @@
 * Allow to override ModelSQL._table
 * Allow to import backend from entry points
 * Add reversed operators to PYSON expressions
+* Explicity raise error when creating/writing/deleting models with table_query
 * Use CURRENT_TIMESTAMP instead of now
 * Use Constraint instance in ModelSQL._sql_constraints
 * Only return default record if no domain supplied on ModelSingleton search
